# graphoc

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
graphoc/: CMakeLists.txt  graphocConfig.cmake.in  graphocConfigShared.cmake.in
graphoc/include/: graph.h  spaths.h
graphoc/src/: graph.c  spaths.c
tests/: CMakeLists.txt  test_add_edge.c  test_check_node_edge.c  test_create_graph.c  test_create_graph_nolabels.c  test_create_graph_zerosize.c  test_dijkstra.c  test_get_degree.c  test_get_edge_count.c  test_get_node_count.c  test_get_node_count_ofnull.c  test_save_graph.c  tests.h
